Bug Fix: Broken styles that needed padding

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -210,3 +210,6 @@ div.paper {
   visibility: hidden
 }
 
+.opacity98 {
+  opacity: .98;
+}
